@@ -15,6 +15,7 @@
 -- Added --wave-direction to also enable backward time without phase shift.
 -- Waves now generated by re-usable little synthethizer library dubbed
    libsyn123.
+-- Pink noise from libsyn123 added (using code from Phil Burk).
 - libsyn123:
 -- Created the library to host some simple signal generators for testing
    output.
